# ChameleonUltraGUI

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PKGBUILD  README.md  SECURITY.md  git-.SRCINFO  git-PKGBUILD  nsis-installer.nsi  release-.SRCINFO  release-PKGBUILD
.github/: FUNDING.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: add-crowdin-keys.yml  build-app.yml  buildapp.yml  download.yml  pin-build.yml  publish-app.yml  triage.yml  update-translations.yml
chameleonultragui/: .gitignore  Gemfile  ffigen.yaml  l10n.yaml  pubspec.yaml  untranslated_messages.json
chameleonultragui/android/: gradle.properties  settings.gradle
chameleonultragui/android/app/: build.gradle
chameleonultragui/android/fastlane/: Appfile  Fastfile  README.md
chameleonultragui/aur/: chameleonultragui.desktop
chameleonultragui/debian/: debian.yaml
chameleonultragui/debian/gui/: chameleonultragui.desktop
chameleonultragui/fastlane/: Appfile  Fastfile  README.md
chameleonultragui/flatpak/: README.md  run.chameleon.chameleonultragui.metainfo.xml  run.chameleon.gui.yml  run.chameleon.yml
chameleonultragui/hook/: build.dart
chameleonultragui/ios/: Podfile  PrivacyInfo.xcprivacy  recovery.podspec
chameleonultragui/ios/Runner/: Info.plist
chameleonultragui/ios/Runner.xcodeproj/: project.pbxproj
chameleonultragui/ios/Runner/Base.lproj/: LaunchScreen.storyboard
chameleonultragui/lib/: main.dart  serialcomMobile.dart  serialcomPC.dart  sharedprefsprovider.dart  sqlite.dart
chameleonultragui/lib/bridge/: chameleon.dart  dfu.dart
chameleonultragui/lib/chameleon/: connector.dart
chameleonultragui/lib/comms/: serial_abstract.dart  serial_ble.dart  serial_mobile.dart  serial_native.dart  serialcomBLE.dart
chameleonultragui/lib/connector/: chameleon.dart  dfu.dart  serial_abstract.dart  serial_android.dart  serial_android_serial.dart  serial_ble.dart  serial_desktop.dart  serial_emulator.dart  serial_macos.dart  serial_mobile.dart  serial_native.dart  serial_stub.dart  serial_web.dart
chameleonultragui/lib/gui/: connectpage.dart  devpage.dart  flashing.dart  homepage.dart  mfkey32page.dart  readcardpage.dart  savedcardspage.dart  savedkeyspage.dart  settingspage.dart  slotmanagerpage.dart  writecardpage.dart
chameleonultragui/lib/gui/component/: button_chameleon_device.dart  button_check_firmware.dart  button_dfu_device.dart  card_button.dart  card_list.dart  card_recovery.dart  card_web_pair_devices.dart  developer_list.dart  dialog_confirm.dart  dialog_device_settings.dart  element_button.dart  error_message.dart  error_page.dart  form_proxy_settings.dart  hex_editor.dart  hex_viewer.dart  key_check_marks.dart  qrcode_scanner.dart  qrcode_viewer.dart  saved_card.dart  (+2 more)
chameleonultragui/lib/helpers/: card_save_converters.dart  cardsave_converters.dart  colors.dart  connection_keepalive.dart  definitions.dart  files.dart  flash.dart  folder_utils.dart  font.dart  general.dart  github.dart  hf_sniff.dart  hf_sniff_models.dart  hf_sniff_stateful_parser.dart  http.dart  lf_sniff.dart  mifare_classic.dart  ndef.dart  open_collective.dart  opencollective.dart  slot_dump.dart  validators.dart  write.dart
chameleonultragui/lib/l10n/: README.md  app_bg.arb  app_ca.arb  app_cs.arb  app_da.arb  app_de.arb  app_de_AT.arb  app_el.arb  app_el_GR.arb  app_en.arb  app_es.arb  app_fr.arb  app_it.arb  app_ko.arb  app_nl.arb  app_no.arb  app_pl.arb  app_pt.arb  app_pt_BR.arb  app_ro.arb  app_ru.arb  app_tr.arb  app_uk.arb  app_zh-Hans.arb  app_zh-TW.arb  app_zh.arb  app_zh_Hans.arb  app_zh_TW.arb  update.py  updateCrowdin.py
chameleonultragui/lib/navigation/: app_router.dart
chameleonultragui/lib/protobuf/: dfu-cc.pb.dart  dfu-cc.pbenum.dart  dfu-cc.pbjson.dart  dfu-cc.pbserver.dart
chameleonultragui/lib/recovery/: bindings.dart  definitions.dart  recovery.dart  recovery_ffi.dart  recovery_stub.dart  recovery_web.dart
chameleonultragui/linux/: CMakeLists.txt  main.cc  my_application.cc
chameleonultragui/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
chameleonultragui/macos/: .gitignore  Podfile  recovery.podspec
chameleonultragui/macos/Classes/: recovery.c
chameleonultragui/macos/Flutter/: GeneratedPluginRegistrant.swift
chameleonultragui/macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
chameleonultragui/macos/Runner.xcodeproj/: project.pbxproj
chameleonultragui/protobuf/: dfu-cc.proto
chameleonultragui/rust/: Cargo.toml
chameleonultragui/rust/.cargo/: config.toml
chameleonultragui/rust/src/: lib.rs
chameleonultragui/src/: CMakeLists.txt  bucketsort.c  bucketsort.h  crapto1.c  crapto1.h  crypto1.c  hardnested.c  hardnested.h  mfkey.c  mfkey.h  mfkey32v2.c  parity.c  parity.h  post_build.bat  recovery.c  recovery.h
chameleonultragui/src/hardnested/: cmdhfmfhard.c  cmdhfmfhard.h  hardnested_benchmark_data.h  hardnested_bf_core.c  hardnested_bitarray_core.c  hardnested_bruteforce.c  hardnested_bruteforce.h  tables.h
chameleonultragui/src/hardnested/hardnested/: hardnested_bf_core.c  hardnested_bf_core.h  hardnested_bitarray_core.c  hardnested_bruteforce.c  hardnested_bruteforce.h
chameleonultragui/src/hardnested/pm3/: ui.c
chameleonultragui/src/minlzlib/: CMakeLists.txt  LICENSE  lzma2dec.c  rangedec.c  xzcrc.c  xzstream.h
chameleonultragui/src/pm3/: common.h  ui.c  ui.h  util.c
chameleonultragui/test/: card_folder_test.dart  communicator_reliability_test.dart  connection_test.dart  electra_support_test.dart  em410x_uid_test.dart  hf_sniff_test.dart  jablotron_test.dart  key_check_marks_test.dart  lf_sniff_test.dart  mifare_classic_block0_test.dart  recovery_test.dart  widget_test.dart
chameleonultragui/web/: index.html  manifest.json  recovery_worker.js
chameleonultragui/windows/: CMakeLists.txt
chameleonultragui/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
chameleonultragui/windows/runner/: Runner.rc  flutter_window.cpp  main.cpp
docs/: CNAME  README.md  index.html  index.md  style.css
functions/: cors.js
worker/: cors-proxy.js
(+123 files in other folders)
