[package]
name = "recovery-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
crapto1 = { git = "https://github.com/ChameleonUltraGUI/crapto1_rs", features = ["parallel", "wasm-rayon"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 3
